[tool.poetry]
name = "archery-secret"
version = "0.1.0"
description = "Generates, encrypt, decrypt and verify secrets."
authors = ["eniocsj <eniocsjunior@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/archeryhq/archery-secret"
repository = "https://github.com/archeryhq/archery-secret"
documentation = "https://github.com/archeryhq/archery-secret/blob/main/README.md"
keywords = [
    "Cryptography", "Security"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.9"
argon2-cffi = "^20.1.0"
cryptography = "^3.4.7"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
